--- a/assets/CSS/Pjsite.css
+++ b/assets/CSS/Pjsite.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+
+body{
+    font-family: 'roboto', sans-serif;
+}
+:root{
+    --powhite: #fff;
+}
+img{
+    width: 30px;
+    height: 30px;
+}
 .carousel-item{
     height: 500px;
 }
@@ -28,4 +39,31 @@
     /* flex-wrap: wrap; */
     justify-content: space-between;
     align-items: center;
+    
+}
+.menu a{
+    color: var(--powhite);
+}
+.menu-logo a {
+    font-size: 2.25em;
+    font-weight: bold;
+}
+.menu-nav ul {
+    display: flex;
+    /* flex-wrap: wrap; */
+}
+.menu-nav a {
+    font-size: 1.25em;
+    padding: 10px;
+    display: inline-block;
+    border: 2px solid ;
+    border-radius: 20px;
+    margin-left: 10px;
+
+
+}
+.menu-nav a:hover{
+    color: rgb(0, 255, 64);
+    transition: 0.9s;
+    background-color: rgb(0, 183, 255);
 }
